资料/MT设备/二次开发例程及接口文件V3.16.2/接口文件3.16.2/3.16.2_Multi/64bit/MT_API.cs

/*
C#接口文件
3.16.2
*/
using System;
using System.Text;
using System.Runtime.InteropServices;
public class MT_API_Multi
{

public const Int32  R_OK =0;
public const Int32  RUN_OFF =0;
public const Int32  RUN_ON =1;
public const Int32  DIR_NEG =0;
public const Int32  DIR_POS =1;
public const Int32  LIMIT_ON =1;
public const Int32  LIMIT_OFF =0;
public const Int32  RESOURCE_MOTOR =0x00000001;
public const Int32  RESOURCE_TTL_IN =0x00000002;
public const Int32  RESOURCE_TTL_OUT =0x00000004;
public const Int32  RESOURCE_OPTIC_IN =0x00000008;
public const Int32  RESOURCE_OPTIC_OUT =0x00000010;
public const Int32  RESOURCE_AD =0x00000020;
public const Int32  RESOURCE_OC =0x00000040;
public const Int32  RESOURCE_LINE =0x00000080;
public const Int32  RESOURCE_CIRCLE =0x00000100;
public const Int32  RESOURCE_PLC =0x00000200;
public const Int32  RESOURCE_STREAM =0x00000400;
public const Int32  RESOURCE_ENCODER =0x00000800;

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Init();

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_DeInit();

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_Dll_Version(ref String sVer);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Thread_Timeout(UInt32 ms);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Open_UART(Int32 ADev,String sCOM);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Open_UART_Unicode(Int32 ADev,String sCOM);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Close_UART(Int32 ADev);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Open_USB(Int32 ADev);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Close_USB(Int32 ADev);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Open_Net(Int32 ADev,Byte IP0,Byte IP1,Byte IP2,Byte IP3,UInt16 IPPort);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Close_Net(Int32 ADev);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Check(Int32 ADev);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_Product_Resource(Int32 ADev,ref Int32 pValue);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_Product_ID(Int32 ADev,String sID);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_Product_SN(Int32 ADev,String sSN);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_Product_SN2(Int32 ADev,ref Byte sSN);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_Product_SN3(Int32 ADev,String sSN);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_Product_Version(Int32 ADev,ref Int32 pMajor,ref Int32 pMinor);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_Product_Version2(Int32 ADev,ref Int32 pMajor,ref Int32 pMinor,ref Int32 pRelease,ref Int32 pBuild);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_Axis_Num(Int32 ADev,ref Int32 pValue);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_Axis_Acc(Int32 ADev,UInt16 AObj,ref Int32 pValue);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Acc(Int32 ADev,UInt16 AObj,Int32 Value);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_Axis_Dec(Int32 ADev,UInt16 AObj,ref Int32 pValue);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Dec(Int32 ADev,UInt16 AObj,Int32 Value);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_Axis_Mode(Int32 ADev,UInt16 AObj,ref Int32 pValue);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Mode_Velocity(Int32 ADev,UInt16 AObj);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Mode_Position(Int32 ADev,UInt16 AObj);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Mode_Position_Open(Int32 ADev,UInt16 AObj);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Mode_Position_Close(Int32 ADev,UInt16 AObj);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_Axis_Velocity_V_Target(Int32 ADev,UInt16 AObj,ref Int32 pValue);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Velocity_V_Target_Abs(Int32 ADev,UInt16 AObj,Int32 Value);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Velocity_V_Target_Rel(Int32 ADev,UInt16 AObj,Int32 Value);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Velocity_Stop(Int32 ADev,UInt16 AObj);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_Axis_Position_V_Max(Int32 ADev,UInt16 AObj,ref Int32 pValue);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Position_V_Max(Int32 ADev,UInt16 AObj,Int32 Value);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_Axis_Position_P_Target(Int32 ADev,UInt16 AObj,ref Int32 pValue);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Position_P_Target_Abs(Int32 ADev,UInt16 AObj,Int32 Value);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Position_P_Target_Rel(Int32 ADev,UInt16 AObj,Int32 Value);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Position_Stop(Int32 ADev,UInt16 AObj);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Position_Close_Dec_Factor(Int32 ADev,UInt16 AObj,Single AFactor);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Halt(Int32 ADev,UInt16 AObj);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Halt_All(Int32 ADev);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_Axis_V_Now(Int32 ADev,UInt16 AObj,ref Int32 pValue);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_Axis_Software_P_Now(Int32 ADev,UInt16 AObj,ref Int32 pValue);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Software_P(Int32 ADev,UInt16 AObj,Int32 Value);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_Axis_Status(Int32 ADev,UInt16 AObj,ref Byte pRun,ref Byte pDir,ref Byte pNeg,ref Byte pPos,ref Byte pZero,ref Byte pMode);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_Axis_Status2(Int32 ADev,UInt16 AObj,ref Int32 pRun,ref Int32 pDir,ref Int32 pNeg,ref Int32 pPos,ref Int32 pZero,ref Int32 pMode);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_Axis_Status_Run(Int32 ADev,UInt16 AObj,ref Int32 pRun);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_Axis_Status_Dir(Int32 ADev,UInt16 AObj,ref Int32 pDir);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_Axis_Status_Neg(Int32 ADev,UInt16 AObj,ref Int32 pNeg);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_Axis_Status_Pos(Int32 ADev,UInt16 AObj,ref Int32 pPos);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_Axis_Status_Zero(Int32 ADev,UInt16 AObj,ref Int32 pZero);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_Axis_Status_Mode(Int32 ADev,UInt16 AObj,ref Int32 pMode);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_Param_Mem_Len(Int32 ADev,ref Int32 pValue);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_Param_Mem_Data(Int32 ADev,UInt16 AObj,ref Byte pValue);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Param_Mem_Data(Int32 ADev,UInt16 AObj,Byte Value);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_System_Mem_Len(Int32 ADev,ref Int32 pValue);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_System_Mem_Data(Int32 ADev,UInt16 AObj,ref Byte pValue);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_System_Mem_Data(Int32 ADev,UInt16 AObj,Byte Value);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_Optic_In_Num(Int32 ADev,ref Int32 pValue);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_Optic_In_Basic_Num(Int32 ADev,ref Int32 pValue);
